# students_registration_API

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/registration/: admin.py  api.py  apps.py  choices.py  models.py  serializers.py  urls.py
apps/registration/migrations/: 0001_initial.py  0002_student_contact_name_and_phone_number.py
students_registration/: asgi.py  docs.py  settings.py  urls.py  wsgi.py
tests/registration/: conftest.py  factories.py  test_api.py  test_models.py  test_serializers.py
